# basic2d-engine

./: CMakeLists.txt
engine/: CMakeLists.txt
engine/src/core/: Engine.cpp  Engine.h  Logger.cpp  Logger.h
engine/src/input/: InputHandler.h
engine/src/rendering/: TextureManager.h
src/: main.cpp
src/audio/: AudioManager.h
src/ecs/systems/: RenderingSystem.h
tests/: CMakeLists.txt  test_Logger.cpp
